2008-05-05  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #7443: DB field tx_dam_mm_ref.ident is too short (Thanks to pekue)
	* Fixed bug #8057: Logging receives wrong parameter and throws error in 4.2

2008-05-02  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #8236: double media folder after update (Patch by Michiel)
	* Fixed bug #6766: getReferencedFiles $whereClauses as string

2008-01-04  Michiel Roos  <michiel@netcreators.com>

	* Fix: 7201: Fatal error when trying to add a plain image from RTE Description		

2008-02-02  Michael Stucki  <michael@typo3.org>

	* Fix: 7368: Block caused by change in TYPO3 4.2

2008-01-04  Michiel Roos  <michiel@netcreators.com>

	* Fix: 6632: DAM media browser upload not working when disallowed is set
	* Fix: 6697: When filename has two minus signs in row, file cannot be edited (no pencil icon).

2008-01-03  Michiel Roos  <michiel@netcreators.com>

	* Fix: 6724: index check always states "File changed" or file missing 

2007-12-27  Michiel Roos  <michiel@netcreators.com>

	* Fix: 6630: xclass ux_t3lib_extFileFunctions->func_upload has wrong default parameters

2007-11-17  Michiel Roos  <michiel@netcreators.com>

	* Fix: 6638: Incorrect parameter to makeInstance

2007-11-14  Michiel Roos  <michiel@netcreators.com>

	* Fix: 6342: Length of the DB fields "file_name" and "file_path" in DB table "tx_dam" are too short

2007-09-29  Michael Stucki  <michael@typo3.org>

	* Takeover by the DAM development team

07-03-26 Rene Fritz  <r.fritz@colorcube.de>

	* Fix: typo in tx_dam_browse_media: t3lib_div::trimeExplode()

07-03-16 Rene Fritz  <r.fritz@colorcube.de>

	* Fix: 5113: tx_dam::path_makeClean() will handle /./ now

07-03-11 Rene Fritz  <r.fritz@colorcube.de>

	* Fix: 4287: In multilingual environments wrong files are displayed in the non-default languages
    * Change: Workaround for media browser of htmlArea in T3 4.1

07-03-06 Rene Fritz  <r.fritz@colorcube.de>

	* Fix: 5143: Categories module shows php error