@@ -2,7 +2,7 @@
 # Add field to table 'be_groups'
 #
 CREATE TABLE be_groups (
-	tx_dam_mountpoints tinytext NOT NULL
+	tx_dam_mountpoints tinytext
 );
 
 
@@ -10,7 +10,7 @@ CREATE TABLE be_groups (
 # Add field to table 'be_users'
 #
 CREATE TABLE be_users (
-	tx_dam_mountpoints tinytext NOT NULL
+	tx_dam_mountpoints tinytext
 );
 
 
@@ -55,7 +55,7 @@ CREATE TABLE tx_dam (
   # languages
   sys_language_uid int(11) DEFAULT '0' NOT NULL,
   l18n_parent int(11) DEFAULT '0' NOT NULL,
-  l18n_diffsource mediumblob NOT NULL,
+  l18n_diffsource mediumblob,
 
   # versioning
   t3ver_oid int(11) DEFAULT '0' NOT NULL,
@@ -71,7 +71,7 @@ CREATE TABLE tx_dam (
   # Service (uri,...), Anything/Sonstiges
   media_type tinyint(4) unsigned DEFAULT '0' NOT NULL,
 
-  title tinytext NOT NULL,
+  title tinytext,
   category int(11) DEFAULT '0' NOT NULL,
 
 
@@ -91,7 +91,7 @@ CREATE TABLE tx_dam (
   file_type_version varchar(9) DEFAULT '' NOT NULL,
 
   file_name varchar(255) DEFAULT '' NOT NULL,
-  file_path text NOT NULL,
+  file_path text,
   file_size int(11) unsigned DEFAULT '0' NOT NULL,
   file_mtime int(11) unsigned DEFAULT '0' NOT NULL,
   file_inode int(11) DEFAULT '0' NOT NULL,
@@ -126,7 +126,7 @@ CREATE TABLE tx_dam (
 
 
   # xml / array
-  meta text NOT NULL,
+  meta text,
 
 
   # sku / bestell nr
@@ -136,19 +136,19 @@ CREATE TABLE tx_dam (
   # photographer
   creator varchar(45) DEFAULT '' NOT NULL,
 
-  keywords tinytext NOT NULL,
-  description text NOT NULL,
+  keywords tinytext,
+  description text,
 
   # for web or FE applications
   alt_text varchar(255) DEFAULT '' NOT NULL,
-  caption text NOT NULL,
+  caption text,
 
 
   # if not set by hand, the first kb of a pdf, doc file for example
-  abstract text NOT NULL,
+  abstract text,
 
   # for searching and non editable: the first 60 kb of a pdf, doc file for example
-  search_content text NOT NULL,
+  search_content text,
 
   # document language
   language char(3) DEFAULT '' NOT NULL,
@@ -161,7 +161,7 @@ CREATE TABLE tx_dam (
   copyright varchar(128) DEFAULT '' NOT NULL,
 
   # instructions and notes
-  instructions tinytext NOT NULL,
+  instructions tinytext,
 
   # created, modified
   # date_cr don`t have to be the file creation time. It is the time a photo is shooten not the time the slide is scanned and saved
@@ -230,11 +230,11 @@ CREATE TABLE tx_dam_cat (
   hidden tinyint(4) unsigned DEFAULT '0' NOT NULL,
   fe_group int(11) DEFAULT '0' NOT NULL,
 
-  title tinytext NOT NULL,
-  nav_title tinytext NOT NULL,
-  subtitle tinytext NOT NULL,
-  keywords text NOT NULL,
-  description text NOT NULL,
+  title tinytext,
+  nav_title tinytext,
+  subtitle tinytext,
+  keywords text,
+  description text,
   PRIMARY KEY (uid),
   KEY parent (pid),
   KEY parent_id (parent_id)
@@ -280,7 +280,7 @@ CREATE TABLE tx_dam_mm_ref (
   uid_local int(11) DEFAULT '0' NOT NULL,
   uid_foreign int(11) DEFAULT '0' NOT NULL,
   tablenames varchar(30) DEFAULT '' NOT NULL,
-  ident TEXT DEFAULT '' NOT NULL,
+  ident text,
   sorting int(11) unsigned DEFAULT '0' NOT NULL,
   sorting_foreign int(11) unsigned DEFAULT '0' NOT NULL,
   KEY uid_local (uid_local),
@@ -313,7 +313,7 @@ CREATE TABLE tx_dam_log_index (
   item_count int(11) unsigned DEFAULT '0' NOT NULL,
 
   # short description
-  message tinytext NOT NULL,
+  message tinytext,
 
   PRIMARY KEY (uid),
   KEY parent (pid),
@@ -329,7 +329,7 @@ CREATE TABLE tx_dam_file_tracking (
   tstamp int(11) unsigned DEFAULT '0' NOT NULL,
 
   file_name varchar(255) DEFAULT '' NOT NULL,
-  file_path text NOT NULL,
+  file_path text,
   file_size int(11) unsigned DEFAULT '0' NOT NULL,
 
   # date of file creation
@@ -365,8 +365,8 @@ CREATE TABLE tx_dam_selection (
 	endtime int(11) DEFAULT '0' NOT NULL,
 	fe_group int(11) DEFAULT '0' NOT NULL,
 	type int(11) DEFAULT '0' NOT NULL,
-	title tinytext NOT NULL,
-	definition text NOT NULL,
+	title tinytext,
+	definition text,
 
 	PRIMARY KEY (uid),
 	KEY parent (pid)
